Elements spacing fix.
Fixed minimal spacing misalignment for CSS and AN buttons.

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ body.big-avatars .dcpanelPersonaMenuImg {
       position: absolute;
       color: #b5bac1;
       font-size: 20px;
-      left: 154px;
+      left: 152px;
       bottom: 12px;
       opacity: unset;
       z-index: 10;
@@ -212,7 +212,7 @@ body.big-avatars .dcpanelPersonaMenuImg {
       position: absolute;
       color: #f9f9f9;
       font-size: 20px;
-      left: 154px;
+      left: 152px;
       bottom: 14px;
       cursor: pointer;
  }
@@ -227,7 +227,7 @@ body:not(:has(.csss--trigger)) #dc-csss-button {
       position: absolute;
       color: #b5bac1;
       font-size: 20px;
-      left: 180px;
+      left: 182px;
       bottom: 14px;
       opacity: unset;
       z-index: 10;
@@ -238,7 +238,7 @@ body:not(:has(.csss--trigger)) #dc-csss-button {
       position: absolute;
       color: #f9f9f9;
       font-size: 20px;
-      left: 180px;
+      left: 182px;
       bottom: 16px;
       cursor: pointer;
  }
